--- a/React/site/package.json
+++ b/React/site/package.json
@@ -18,7 +18,9 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.10"
+    "mongoose": "^5.11.10",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
