--- a/React/site/package.json
+++ b/React/site/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./server/server.js --exec babel-node"
+    "dev": "nodemon ./server/server.js --exec babel-node --ignore './client'"
   },
   "author": "",
   "license": "ISC",
@@ -18,9 +18,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.10",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^10.1.0"
+    "mongoose": "^5.11.10"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
