--- a/React/site/package.json
+++ b/React/site/package.json
@@ -10,6 +10,37 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.12.12",
+    "@babel/plugin-transform-react-jsx-self": "^7.12.1",
+    "@ckeditor/ckeditor5-adapter-ckfinder": "^24.0.0",
+    "@ckeditor/ckeditor5-alignment": "^24.0.0",
+    "@ckeditor/ckeditor5-autoformat": "^24.0.0",
+    "@ckeditor/ckeditor5-basic-styles": "^24.0.0",
+    "@ckeditor/ckeditor5-block-quote": "^24.0.0",
+    "@ckeditor/ckeditor5-build-balloon": "^24.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^24.0.0",
+    "@ckeditor/ckeditor5-build-inline": "^24.0.0",
+    "@ckeditor/ckeditor5-dev-utils": "^24.0.1",
+    "@ckeditor/ckeditor5-dev-webpack-plugin": "^24.0.1",
+    "@ckeditor/ckeditor5-easy-image": "^24.0.0",
+    "@ckeditor/ckeditor5-editor-balloon": "^24.0.0",
+    "@ckeditor/ckeditor5-editor-classic": "^24.0.0",
+    "@ckeditor/ckeditor5-essentials": "^24.0.0",
+    "@ckeditor/ckeditor5-font": "^24.0.0",
+    "@ckeditor/ckeditor5-heading": "^24.0.0",
+    "@ckeditor/ckeditor5-image": "^24.0.0",
+    "@ckeditor/ckeditor5-indent": "^24.0.0",
+    "@ckeditor/ckeditor5-link": "^24.0.0",
+    "@ckeditor/ckeditor5-list": "^24.0.0",
+    "@ckeditor/ckeditor5-media-embed": "^24.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^24.0.0",
+    "@ckeditor/ckeditor5-paste-from-office": "^24.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.0",
+    "@ckeditor/ckeditor5-table": "^24.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^24.0.0",
+    "@ckeditor/ckeditor5-typing": "^24.0.0",
+    "@ckeditor/ckeditor5-upload": "^24.0.0",
+    "aws-sdk": "^2.828.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -18,7 +49,11 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.10"
+    "mongoose": "^5.11.10",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "path": "^0.12.7",
+    "raw-loader": "3"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
